[package]
edition      = "2024"
name         = "hall-effect"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "hall-effect"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "=1.0.0-rc.1", features = [
  "defmt",
  "esp32s3",
  "unstable",
] }

esp-rtos = { version = "0.1.1", features = ["defmt", "embassy", "esp32s3"] }

defmt                  = "1.0.1"
esp-bootloader-esp-idf = { version = "0.3.0", features = ["esp32s3"] }

embassy-executor = { version = "0.9.0", features = ["defmt"] }
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
rtt-target       = { version = "0.6.1", features = ["defmt"] }

critical-section = "1.2.0"
static_cell      = "2.1.1"
smart-leds = "0.4.0"
embassy-time = "0.5.0"
nb = "1.1.0"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
